--- a/.github/workflows/android-release.yml
+++ b/.github/workflows/android-release.yml
@@ -81,6 +81,16 @@ jobs:
           echo "${{ secrets.PLAY_STORE_SERVICE_ACCOUNT }}" | base64 --decode > google-play-service-account.json
 
       # ── Build Signed AAB ──
+      - name: Setup Versioning
+        run: |
+          # Strip 'v' prefix from tag (v1.0.2 -> 1.0.2)
+          if [[ $GITHUB_REF_NAME == v* ]]; then
+            echo "VERSION_NAME=${GITHUB_REF_NAME#v}" >> $GITHUB_ENV
+          else
+            echo "VERSION_NAME=1.0.0" >> $GITHUB_ENV
+          fi
+          echo "VERSION_CODE=${{ github.run_number }}" >> $GITHUB_ENV
+
       - name: Build Release AAB
         working-directory: android
         run: |
@@ -88,7 +98,11 @@ jobs:
             -Pandroid.injected.signing.store.file=${{ github.workspace }}/android/app/upload-keystore.jks \
             -Pandroid.injected.signing.store.password=${{ secrets.KEYSTORE_PASSWORD }} \
             -Pandroid.injected.signing.key.alias=${{ secrets.KEY_ALIAS }} \
-            -Pandroid.injected.signing.key.password=${{ secrets.KEY_PASSWORD }}
+            -Pandroid.injected.signing.store.password=${{ secrets.KEYSTORE_PASSWORD }} \
+            -Pandroid.injected.signing.key.alias=${{ secrets.KEY_ALIAS }} \
+            -Pandroid.injected.signing.key.password=${{ secrets.KEY_PASSWORD }} \
+            -PversionCode=${{ env.VERSION_CODE }} \
+            -PversionName=${{ env.VERSION_NAME }}
 
       # ── Fastlane Upload ──
       - name: Setup Ruby
