fix(ci): add offset to version code to prevent conflict

--- a/.github/workflows/android-release.yml
+++ b/.github/workflows/android-release.yml
@@ -89,7 +89,8 @@ jobs:
           else
             echo "VERSION_NAME=1.0.0" >> $GITHUB_ENV
           fi
-          echo "VERSION_CODE=${{ github.run_number }}" >> $GITHUB_ENV
+          # Offset by 100 to avoid conflicts with manual builds (1-3)
+          echo "VERSION_CODE=$(( ${{ github.run_number }} + 100 ))" >> $GITHUB_ENV
 
       - name: Build Release AAB
         working-directory: android
