--- a/.github/workflows/android-release.yml
+++ b/.github/workflows/android-release.yml
@@ -89,8 +89,7 @@ jobs:
           else
             echo "VERSION_NAME=1.0.0" >> $GITHUB_ENV
           fi
-          # Offset by 100 to avoid conflicts with manual builds (1-3)
-          echo "VERSION_CODE=$(( ${{ github.run_number }} + 100 ))" >> $GITHUB_ENV
+          echo "VERSION_CODE=${{ github.run_number }}" >> $GITHUB_ENV
 
       - name: Build Release AAB
         working-directory: android
@@ -121,6 +120,8 @@ jobs:
           KEYSTORE_PASSWORD: ${{ secrets.KEYSTORE_PASSWORD }}
           KEY_ALIAS: ${{ secrets.KEY_ALIAS }}
           KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
+          VERSION_CODE: ${{ env.VERSION_CODE }}
+          VERSION_NAME: ${{ env.VERSION_NAME }}
         run: |
           TRACK="${{ github.event.inputs.track || 'internal' }}"
           bundle exec fastlane $TRACK
